<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大棚云管家</string>
    <string name="logo_zigvine">Zigvine</string>
    <string name="logo_signin">登录</string>
    <string name="auto_login">记住用户登录</string>
    <string name="signin_loading">正在登录&#8230;</string>
    <string name="loading_info">载入信息&#8230;</string>
    <string name="hint_user">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_mobile">请输入你的手机号码</string>
    <string name="signoff">注销</string>
    <string name="already_signoff">用户已经注销，需重新登录</string>
    <string name="menu_notice">访问www.zigvine.com进行账户管理</string>
    <string name="group_list">大棚列表</string>
    <string name="monitor">监测</string>
    <string name="control">控制</string>
    <string name="graph">图表</string>
    <string name="alarm">告警</string>
    <string name="title_back">返回</string>
    <string name="title_menu">大棚列表</string>
    <string name="more_menu">更多菜单</string>
    <string name="more_refresh">刷新</string>
    <string name="menu_settings">设置</string>
    <string name="quota">指标</string>
    <string name="loading_list">正在载入数据&#8230;</string>
    <string name="loading_data">正在获取数据，稍等片刻</string>
    <string name="loaded_list">载入成功</string>
    <string name="menu_about">关于</string>
    <string name="menu_license">许可协议</string>
    <string name="menu_guide">提问帮助</string>
    <string name="menu_update">检查版本更新</string>
    <string name="menu_logoff">注销</string>
    <string name="subforum_send">发表评论</string>
    <string name="post_title">标题</string>
    <string name="post_content">内容</string>
    <string name="post_image">选中的图片</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="e1">请输入用户名</string>
    <string name="e2">请输入密码</string>
    <string name="e3">无此邮箱账户</string>
    <string name="e4">载入失败，请重新登录</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    

</resources>