<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/post_title"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/post_content"
        android:inputType="textMultiLine"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    <FrameLayout
        android:id="@+id/post_frame"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:background="@drawable/image_frame"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/post_image" />
        
        <View
            android:id="@+id/post_image_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/title_btn" />
    </FrameLayout>

</LinearLayout>