<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.zigvine.zagriculture"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/title_height" />

    <LinearLayout
        android:id="@+id/custom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/titlebar"
        android:orientation="horizontal" >
        
        <LinearLayout 
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:background="@drawable/title_btn"
            android:orientation="horizontal">
        
	        <ImageView
	            android:id="@+id/title_menu"
	            android:layout_width="@dimen/title_height"
	            android:layout_height="@dimen/title_height"
	            android:contentDescription="@string/title_menu"
	            android:scaleType="centerInside"
	            android:src="@drawable/ic_menu_title" />
	
	        <TextView
	            android:id="@+id/title_text"
	            android:layout_width="wrap_content"
	            android:layout_height="@dimen/title_height"
	            android:gravity="center"
	            android:paddingRight="10dp"
	            android:text="@string/hello_world"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="#ccffffff" />
        
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/title_height"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/refresh_menu"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:background="@drawable/title_btn"
            android:contentDescription="@string/more_refresh"
            android:scaleType="centerInside"
            android:src="@drawable/ic_menu_refresh"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/more_menu"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:background="@drawable/title_btn"
            android:contentDescription="@string/more_menu"
            android:scaleType="centerInside"
            android:src="@drawable/ic_menu_moreoverflow"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/custom_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottomtab"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/footer_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_height"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/monitor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableTop="@drawable/monitor_select"
                android:gravity="center"
                android:text="@string/monitor"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ff9000"
                android:background="@drawable/title_btn" />

            <TextView
                android:id="@+id/control"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableTop="@drawable/control"
                android:gravity="center"
                android:text="@string/control"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:background="@drawable/title_btn" />

            <!--TextView
                android:id="@+id/graph"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawableTop="@drawable/graph"
                android:gravity="center"
                android:text="@string/graph"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#99ffffff"
                android:background="@drawable/title_btn" /-->

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/alarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:drawableTop="@drawable/alarm"
                    android:gravity="center"
                    android:text="@string/alarm"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffffff"
                    android:background="@drawable/title_btn" />

                <TextView
                    android:id="@+id/tab_alarm_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="-6dp"
                    android:background="@drawable/notify_icon"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <org.taptwo.android.widget.SimpleFlowIndicator
            android:id="@+id/indic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="0dp"
            app:activeColor="#ff9000"
            app:fadeOut="0"
            app:gap="1dp"
            app:height="2dp"
            app:inactiveColor="#33bababa"
            app:inactiveType="fill"
            app:type="square"
            app:width="50dp" />
    </FrameLayout>

</FrameLayout>