<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg_top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/device_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#22c2fd" />

        <View
            android:id="@+id/alarm_mark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/alarm_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3322c2fd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#22c2fd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3322c2fd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/quotaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/quota"
            android:src="@drawable/quota_unkown" />

        <TextView
            android:id="@+id/quota_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/hello_world"
            android:textColor="#605f5f"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/quota_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/hello_world"
            android:textColor="#fdb222"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/monitor_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingBottom="10dp"
        android:paddingRight="15dp"
        android:text="@string/menu_notice"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#6b6a6a" />

</LinearLayout>