<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pageritem_bg_top"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/quota_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/hello_world"
            android:textColor="#605f5f"
            android:textSize="25sp" />

        <ProgressBar
            android:id="@+id/item_progressbar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|right"
            android:visibility="gone" />
        
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3322c2fd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#22c2fd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3322c2fd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/quotaId"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/quota"
            android:src="@drawable/quota_unkown" />

        <TextView
            android:id="@+id/quota_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/hello_world"
            android:textColor="#edb222"
            android:textSize="23sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/more_control"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_line_repeat" >

        <LinearLayout
            android:id="@+id/control_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="top"
            android:background="@drawable/top_shadow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bottom_shadow" />
    </FrameLayout>

    <TextView
        android:id="@+id/monitor_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingBottom="10dp"
        android:paddingRight="15dp"
        android:text="@string/menu_notice"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#6b6a6a" />

</LinearLayout>