<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >
        
        <ImageView
            android:id="@+id/dialog_quotaId"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:contentDescription="@string/quota"
            android:src="@drawable/quota_unkown" />

        <TextView
            android:id="@+id/dialog_device_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#7c7c7c" />

        <ProgressBar
            android:id="@+id/dialog_progressbar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical" />
        
    </LinearLayout>

    

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

        <org.taptwo.android.widget.ViewFlow 
            android:id="@+id/graph_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/tx1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:padding="2dp"
            android:textColor="#605f5f"
            android:textSize="13sp"
            android:textIsSelectable="false" />
        
        <TextView
            android:id="@+id/tx2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:padding="2dp"
            android:textColor="#605f5f"
            android:textSize="13sp"
            android:textIsSelectable="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="top"
            android:background="@drawable/top_shadow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bottom_shadow" />
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/dialog_quota_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/hello_world"
            android:textColor="#605f5f"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/dialog_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/hello_world"
            android:textColor="#fdb222"
            android:textSize="20sp" />
    </LinearLayout>

    <com.zigvine.android.anim.QueuedTextView
        android:id="@+id/dialog_monitor_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingBottom="10dp"
        android:paddingRight="15dp"
        android:text="@string/menu_notice"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#6b6a6a" />

</LinearLayout>